# simple-backup

./: .gitignore  README.md  二维码json.txt  功能梳理.txt  问题清单.txt
app/: gradle.properties  settings.gradle
app/app/: build.gradle
app/app/schemas/io.github.cctyl.backup.dao.ApplicationDatabase/: 1.json  2.json  3.json
app/app/src/main/: AndroidManifest.xml
app/design/: 主界面v1.html  主界面v2.html  备份界面.html  备份进行中界面v1.html  服务器设置.html
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
design/: index-demo.html  主界面v2.html  增量备份app.txt  备份源管理界面.html  帮助界面.html  活动日志界面.html  界面流程.txt  问题清单.txt
server/: .env  Cargo.toml  data.db-shm  data.db-wal  index.html
server/migrations/: 20250717090801_users.down.sql  20250717090801_users.up.sql  20250718045035_file.down.sql  20250718045035_file.up.sql
server/src/: main.rs
server/src/app/: config.rs  database.rs  error.rs  middleware.rs
server/src/dao/: file.rs  user.rs
server/src/entity/: dtos.rs  models.rs
server/src/handler/: file.rs  mod.rs  user.rs
web/: README.md  package-lock.json  package.json  vue.config.js
web/assets_backup/: index.html
web/public/: index.html
web/public/css/: css2.css  icon.css  iconfont.css
web/src/: App.vue  main.js
web/src/components/: AnimatedTransition.vue  CircularProgress.vue  ConfirmModal.vue  Dialog.vue  DirectoryGuideDialog.vue  Footer.vue  Header.vue  Loading.vue  SelectFolder.vue
web/src/pages/: Help.vue  History.vue  Home.vue  Settings.vue
web/src/router/: index.js
web/src/store/: actions.js  mutations.js  state.js
(+83 files in other folders)
